test_regress/t/t_typedef_unused_bad.out
%Error: t/t_typedef_unused_bad.v:9:9: Forward typedef unused or does not resolve to a data type (IEEE 1800-2023 6.18): 'fwd_undecl_t'
    9 | typedef fwd_undecl_t;
      |         ^~~~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
